--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -1,6 +1,6 @@
 
 name: Terraform Deployment
-f# This is a basic workflow to help you get started with Actions
+# This is a basic workflow to help you get started with Actions
 
 on:
   push:
