--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -11,4 +11,4 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: Run Ansible Playbook
-        run: ansible-playbook -i inventory.ini day2operations.yml
+        run: ansible-playbook -i ~/terraform/sandbox/inventory.ini ~/terraform/sandbox/day2operations.yml
