--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -11,4 +11,4 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: Run Ansible Playbook
-        run: ansible-playbook -i install-apache.yml
+        run: ansible-playbook -i install_apache.yml
