--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -16,4 +16,4 @@ jobs:
        
       - name: Run Ansible Playbook
         run: |
-          uptime
+          ansible-playbook install_apache.yml -i localhost, --connection=local
