test ansible workflow

--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -12,5 +12,4 @@ jobs:
        
       - name: Run Ansible Playbook
         run: |
-          echo "Workspace is: $GITHUB_WORKSPACE"
-          ls -la $GITHUB_WORKSPACE
+          ansible-playbook -i inventory.ini install_apache.yml
