--- a/inventory.ini
+++ b/inventory.ini
@@ -2,6 +2,6 @@
 192.168.1.74
 
 [all:vars]
-ansible_user=reneadmin
-ansible_ssh_private_key_file=~/.ssh/id_ed25519
+ansible_user=ansible
+ansible_ssh_private_key_file=~/.ssh/ansikey
 
