--- a/inventory.ini
+++ b/inventory.ini
@@ -1,6 +1,7 @@
 [webservers]
 192.168.1.74
-
+[dbservers]
+192.168.100.1
 [all:vars]
 ansible_user=ansible
 ansible_ssh_private_key_file=~/.ssh/ansikey
