--- a/.github/workflows/install_webserver.yml
+++ b/.github/workflows/install_webserver.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main  # Change this to your main branch name
 jobs:
-  run-playbooks:
+  install-webserver:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3
