anible-lint added

--- a/.github/workflows/install_webserver.yml
+++ b/.github/workflows/install_webserver.yml
@@ -15,6 +15,11 @@ jobs:
           terraform init
           terraform plan
           terraform apply -auto-approve
+          
+      - name: check Ansible Playbook syntax
+        run: |
+          ansible-lint day2operations.yml
+          
       - name: Run Ansible Playbook
         run: |
           ansible-playbook -i inventory.ini day2operations.yml
