--- a/.github/workflows/install_webserver.yml
+++ b/.github/workflows/install_webserver.yml
@@ -8,7 +8,10 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3
-       
+      - name: check Terraform syntax
+        run: |
+          terraform validate
+          terraform fmt
       - name: run terraform Deployment (test)
         run: |
           terraform init
