--- a/.github/workflows/install_webserver.yml
+++ b/.github/workflows/install_webserver.yml
@@ -1,6 +1,10 @@
 name: VM Deployment with terraform and ansible
 on:
-  push:
+  pull_request: # runs at pull request
+    types:
+      - opened
+    branches:
+      - 'production' # in production branch
     paths:
       - '**.tf'  # runs only when terraform file is changed
 jobs:
