--- a/.github/workflows/install_webserver.yml
+++ b/.github/workflows/install_webserver.yml
@@ -2,9 +2,9 @@ name: VM Deployment with terraform and ansible
 on:
   pull_request: # runs at pull request
     types:
-      - opened
+      - closed
     branches:
-      - 'production' # in production branch
+      - 'main' # in main branch
     paths:
       - '**.tf'  # runs only when terraform file is changed
 jobs:
