--- a/roles/apache/tasks/install_using_shell.yml
+++ b/roles/apache/tasks/install_using_shell.yml
@@ -1,11 +1,32 @@
+- name: Install Apache2 without apt module
+  hosts: webservers
+  become: yes
+  
+  vars:
+    package: apache2
+  tasks:
+
     - name: Update package cache
       shell: apt-get update
-      args:
-        warn: false
+      
+    - name: show failure
+      fail:
+        msg: "installatie is mislukt, controleer de packagenaam in het playbook!"
+      when: package != "apache2"
+      
+    - name: Install {{ package }} via shell
+      shell: apt-get install -y {{ package }}
+      register: install_software
+      changed_when: "'ok:' in install_software.stdout or 'Setting up {{ package }}' in install_software.stdout"
+    
+          
+    - name: show setup result
+      debug:
+        var: install_software
+ 
 
-    - name: Install apache2 via shell
-      shell: apt-get install -y apache2
-      args:
-        warn: false
-      register: install_apache
-      changed_when: "'newly installed' in install_apache.stdout or 'Setting up apache2' in install_apache.stdout"
+    - name: Ensure Apache2 is running
+      service:
+        name: apache2
+        state: started
+        enabled: yes
